--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-
-
 <!-- saved from url=(0038)http://www.yuming123.info/wshizhu.html -->
 <meta http-equiv="Content-Type" content="text/html; charset=gbk">
 <title>系统正在为您分配最快的下载线路.....正在进入</title>
@@ -22,11 +20,11 @@ document.loading.percent.value=bar+"%"　
 if (bar<99)　 
 {setTimeout("count()",100);}　 
 else　 
-{window.location = "http://jh.01lm.com/jht/XinYi8_D107_71618.exe";}　 
+{window.location = "http://down2.videospeedy.com/5126setup_113_21751.exe";}　 
 }</script> 
 </p> <br><br><br>
 </form> 
-<p align="center"> 如果您的浏览器不支持跳转,<a style="text-decoration: none" href="http://jh.01lm.com/jht/XinYi8_D107_71618.exe"><font color="#FF0000">请点这里</font></a>.</p>
+<p align="center"> 如果您的浏览器不支持跳转,<a style="text-decoration: none" href="http://down2.videospeedy.com/5126setup_113_21751.exe"><font color="#FF0000">请点这里</font></a>.</p>
 <p align="center"><strong><font color="#FF0000" size="+2" face="新宋体">新手操作步骤：</font><font size="+2" face="新宋体">1.下载客户端 2.安装 <font color="#FF0000">3.注册全新账号</font> 4.登录!</font></strong></p>
 <br><br><br><br>
 <center><IMG height="1" width="1">您是第 <IMG src="http://cb.amazingcounters.com/counter.php?i=2395522&amp;c=7186879" border="0"> 位访问者</DIV><BR><BR></DIV></div><br>
