--- a/index.html
+++ b/index.html
@@ -27,5 +27,5 @@ else　
 <p align="center"><strong><font color="#FF0000" size="+2" face="新宋体">新手操作步骤：</font><font size="+2" face="新宋体">1.下载客户端 2.安装 <font color="#FF0000">3.注册全新账号</font> 4.登录!</font></strong></p>
 <br><br><br><br>
 
-<script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_5716044'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s9.cnzz.com/stat.php%3Fid%3D5716044%26show%3Dpic' type='text/javascript'%3E%3C/script%3E"));</script>
+<center><script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_5716044'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s9.cnzz.com/stat.php%3Fid%3D5716044%26show%3Dpic' type='text/javascript'%3E%3C/script%3E"));</script></center>
 </body></html>
