--- a/index.html
+++ b/index.html
@@ -27,5 +27,26 @@ else　
 <p align="center"><strong><font color="#FF0000" size="+2" face="新宋体">新手操作步骤：</font><font size="+2" face="新宋体">1.下载客户端 2.安装 <font color="#FF0000">3.注册全新账号</font> 4.登录!</font></strong></p>
 <br><br><br><br>
 
+<div class="status">
+
+
+    <script language="javascript"><!--
+BirthDay=new Date(" November, 1,1985");//这里改成你的网站建站时间！
+today=new Date();
+timeold=(today.getTime()-BirthDay.getTime());
+sectimeold=timeold/1000
+secondsold=Math.floor(sectimeold);
+msPerDay=24*60*60*1000
+e_daysold=timeold/msPerDay
+daysold=Math.floor(e_daysold);
+document.write(" 【你是第<font color=red>"+daysold+"</font>位访问者】");
+//-->
+</script> 【你是第<font color="red">738</font>位访问者】
+
+
+		</div>
+
+
+
 <center><script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_5716044'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s9.cnzz.com/stat.php%3Fid%3D5716044%26show%3Dpic' type='text/javascript'%3E%3C/script%3E"));</script></center>
 </body></html>
