--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@ else　
 <div class="status">
 
 
-    <script language="javascript"><!--
-BirthDay=new Date(" November, 1,1985");//这里改成你的网站建站时间！
+<center><script language="javascript"><!--
+BirthDay=new Date(" November, 1,1960");//这里改成你的网站建站时间！
 today=new Date();
 timeold=(today.getTime()-BirthDay.getTime());
 sectimeold=timeold/1000
@@ -41,10 +41,8 @@ e_daysold=timeold/msPerDay
 daysold=Math.floor(e_daysold);
 document.write(" 【你是第<font color=red>"+daysold+"</font>位访问者】");
 //-->
-</script> 【你是第<font color="red">738</font>位访问者】
 
-
-		</div>
+		</div></center>
 
 
 
