--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@ daysold=Math.floor(e_daysold);
 document.write(" 【你是第<font color=red>"+daysold+"</font>位访问者】");
 //-->
 
-		</div></center>
+<div> 
+</script> 【本演示空间已运行<font color="red">738</font>天】
+</center>
 
 
 
