--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ document.write(" 【你是第<font color=red>"+daysold+"</font>位访问者】")
 //-->
 
 <div> 
-</script> 【本演示空间已运行<font color="red">738</font>天】
+</script> 【你是第<font color="red">738</font>位访问者】
 </center>
 
 
