--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ visits = 1
 else
 visits = parseInt(visits) + 58144  //改为1000，增加好快，^_^
 setCookie("counter", visits, now)
-document.write("您是第" + visits + "位访问者")
+document.write("您是第74158" + visits + "位访问者")
 // -->
 </SCRIPT>
 </center>
