--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ visits = 1
 else
 visits = parseInt(visits) + 10  //改为1000，增加好快，^_^
 setCookie("counter", visits, now)
-document.write("您是第 208158" + visits + " 位访问者")
+document.write("<font color="#EE0000">您是第 208158" + visits + " 位访问者</font>")
 // -->
 </SCRIPT>
 </center>
