--- a/ceshi.html
+++ b/ceshi.html
@@ -16,7 +16,7 @@ window.location.href=arr[n];
 </script>
 </head>
 <body><br><br><br><br>
-<a href="http://xiabayes.meipinla.com" onclick="winconfirm(); return false;"><img src="http://ww1.sinaimg.cn/large/67b8e0d6tw1el0hs7p0jmg209g0233yl.gif" border="0" width="340" height="75"></a>
+<a href="/" onclick="winconfirm(); return false;"><img src="http://ww1.sinaimg.cn/large/67b8e0d6tw1el0hs7p0jmg209g0233yl.gif" border="0" width="340" height="75"></a>
 <br>
 </body>
 </html>
