--- a/ceshi.html
+++ b/ceshi.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=gb2312">
-<title>测试跳转</title>
+<title>已为你选择最佳下载线路...</title>
 <script>
 function a(){
 var arr=["http://www.baidu.com",
@@ -16,7 +16,8 @@ window.location.href=arr[n];
 </script>
 </head>
 <body><br><br><br><br>
-<a href="/" onclick="winconfirm(); return false;"><img src="http://ww1.sinaimg.cn/large/67b8e0d6tw1el0hs7p0jmg209g0233yl.gif" border="0" width="340" height="75"></a>
+<center><input type=button value="<b>已经为你选择最佳线路  <点这里下载> </b> " onclick=a()></center>
 <br>
+<a href="http://qianbao.baidu.com/hd/dream?qianbao" target="_blank"><img src="http://gongyi.baidu.com/gongyi/ad2.jpg" width="239" height="891"></a>
 </body>
 </html>
