--- a/ceshi.html
+++ b/ceshi.html
@@ -17,8 +17,8 @@ window.location.href=arr[n];
 </script>
 </head>
 <body><br><br><br><br>
-<center><font color="#FF0000">系统自动为你选择下载速度最快的线路</font></center><br><br><br>
-<center><input type=button value="已经为你选择最佳线路  <点这里下载>  " onclick=a()></center>
+<center><font color="#FF0000">系统自动已经为你选择下载速度最快的线路</font></center><br><br>
+<center><input type=button value="已经为你选择最佳的线路  <请点这里下载>  " onclick=a()></center>
 <br>
 
 </body>
