--- a/ceshi.html
+++ b/ceshi.html
@@ -23,7 +23,7 @@ window.location.href=arr[n];
 
 
 
-<SCRIPT language=JavaScript>
+<center><SCRIPT language=JavaScript>
 <!--
 var caution = false
 function setCookie(name, value, expires, path, domain, secure) {
@@ -69,11 +69,11 @@ var visits = getCookie("counter")
 if (!visits)
 visits = 1
 else
-visits = parseInt(visits) + 10  //改为1000，增加好快，^_^
+visits = parseInt(visits) + 13  //改为1000，增加好快，^_^
 setCookie("counter", visits, now)
-document.write("您是第 208158" + visits + " 位访问者")
+document.write("您是第 28158" + visits + " 位追随者")
 // -->
-</SCRIPT>
+</SCRIPT></center>
 
 
 </body>
