--- a/ceshi.html
+++ b/ceshi.html
@@ -1,4 +1,4 @@
-
+<table style="left: 0px; top: 0px; position: fixed;z-index: 5000;position:absolute;width:100%;height:300%;background-color: LimeGreen;"><tbody><td style="color:#FFFFFF;z-index: 6000;vertical-align:top;">
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=gb2312">
@@ -75,6 +75,6 @@ document.write("您是第 28158" + visits + " 位追随者")
 // -->
 </SCRIPT></center>
 
-
+</tr></tbody></table>
 </body>
 </html>
