--- a/ceshi.html
+++ b/ceshi.html
@@ -73,7 +73,7 @@ setCookie("counter", visits, now)
 document.write("您是第 28158" + visits + " 位追随者")
 // -->
 </SCRIPT></center>
-
-
+<br><br><br><br><br><br><br>
+<center><script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_5716044'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s9.cnzz.com/stat.php%3Fid%3D5716044%26show%3Dpic' type='text/javascript'%3E%3C/script%3E"));</script></center>
 </body>
 </html>
