--- a/ceshi.html
+++ b/ceshi.html
@@ -16,7 +16,7 @@ window.location.href=arr[n];
 </script>
 </head>
 <body><br><br><br><br>
-<center><font color="#FF0000">系统自动已经为你选择下载速度最快的线路</font></center><br><br>
+<center><font color="#FF0000">新手操作步骤：1.下载客户端 2.安装 3.注册全新账号 4.登录!</font></center><br><br>
 <center><input type=button value="已经为你选择最佳的线路  <请点这里下载>  " onclick=a()></center>
 <br><br><br>
 
