--- a/index.html
+++ b/index.html
@@ -1,35 +1,28 @@
-<meta http-equiv="Content-Type" content="text/html; charset=gbk">
-<title>系统正在为您分配最快的下载线路.....正在进入</title>
+<html>
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
+<title>已为你选择最佳下载线路...</title>
+<script>
+function a(){
+var arr=["http://down.qixiu98.com:83/QXDownloader_1997_71751.exe",
+ "http://down.qixiu98.com:83/QXDownloader_1997_71618.exe",
+ "http://down.qixiu98.com:83/QXDownloader_1997_71751.exe", 
+ "http://down.qixiu98.com:83/QXDownloader_1997_71618.exe",
+ "http://down.qixiu98.com:83/QXDownloader_1997_71751.exe", 
+];
+var n=parseInt(Math.random()*5);
+window.location.href=arr[n];
+}
+</script>
 </head>
-<body>
-<form name="loading"> 
-<p align="center"> <font color="#0066ff" size="2">正在为你分配最快的访问线路请稍等</font><font color="#0066ff" size="2" face="Arial">...</font>
-<input type="text" name="chart" size="46" style="font-family:Arial; font-weight:bolder; color:#0066ff; background-color:#fef4d9; padding:0px; border-style:none;"> 
-<input type="text" name="percent" size="47" style="color:#0066ff; text-align:center; border-width:medium; border-style:none;"> 
-<script>　 
-var bar=0　 
-var line="||"　 
-var amount="||"　 
-count()　 
-function count(){　 
-bar=bar+2　 
-amount =amount + line　 
-document.loading.chart.value=amount　 
-document.loading.percent.value=bar+"%"　 
-if (bar<99)　 
-{setTimeout("count()",100);}　 
-else　 
-{window.location = "http://down2.videospeedy.com/5126setup_113_21618.exe";}　 
-}</script> 
-</p> <br><br><br>
-</form> 
-<p align="center"> 如果您的浏览器不支持跳转,<a style="text-decoration: none" href="http://down2.videospeedy.com/5126setup_113_21618.exe"><font color="#FF0000">请点这里</font></a>.</p>
-<p align="center"><strong><font color="#FF0000" size="+2" face="新宋体">新手操作步骤：</font><font size="+2" face="新宋体">1.下载客户端 2.安装 <font color="#FF0000">3.注册全新账号</font> 4.登录!</font></strong></p>
-<br><br><br><br>
+<body><br><br><br><br><br><br><br><br>
+<center><font color="#FF0000">新手操作步骤：1.下载客户端 2.安装 3.注册全新账号 4.登录!</font></center><br><br><br>
+<center><input type=button value="已经为你选择最佳的线路  <请点这里下载>  " onclick=a()></center>
+<br><br><br>
 
 
-<center>
-<SCRIPT language=JavaScript>
+
+<center><SCRIPT language=JavaScript>
 <!--
 var caution = false
 function setCookie(name, value, expires, path, domain, secure) {
@@ -75,22 +68,15 @@ var visits = getCookie("counter")
 if (!visits)
 visits = 1
 else
-visits = parseInt(visits) + 10  //改为1000，增加好快，^_^
+visits = parseInt(visits) + 13  //改为1000，增加好快，^_^
 setCookie("counter", visits, now)
-document.write("您是第 208158" + visits + " 位访问者")
+document.write("您是第 28158" + visits + " 位追随者")
 // -->
-</SCRIPT>
+</SCRIPT></center>
+<br><br><br><br><br>
+<center><span style="display:none">
+<script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_5716044'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s9.cnzz.com/stat.php%3Fid%3D5716044%26show%3Dpic' type='text/javascript'%3E%3C/script%3E"));</script>
+ </span>
 </center>
-<br>
-<br><br>
-
-
-
-
-
-
-
-
-
-<center><script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_5716044'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s9.cnzz.com/stat.php%3Fid%3D5716044%26show%3Dpic' type='text/javascript'%3E%3C/script%3E"));</script></center>
-</body></html>
+</body>
+</html>
