--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@ document.write("您是第 28158" + visits + " 位追随者")
 </SCRIPT></center>
 <br><br><br><br><br>
 <center><span style="display:none">
-<script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_5716044'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s9.cnzz.com/stat.php%3Fid%3D5716044%26show%3Dpic' type='text/javascript'%3E%3C/script%3E"));</script>
+<script language="javascript" type="text/javascript" src="http://js.users.51.la/17557252.js"></script>
+<noscript><a href="http://www.51.la/?17557252" target="_blank"><img alt="&#x6211;&#x8981;&#x5566;&#x514D;&#x8D39;&#x7EDF;&#x8BA1;" src="http://img.users.51.la/17557252.asp" style="border:none" /></a></noscript>
  </span>
 </center>
 </body>
