--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <title>已为你选择最佳下载线路...</title>
 <script>
 function a(){
 var arr=["http://download.re58.cn/down/girlshow_22091730138.exe",
+ "http://down2.videospeedy.com/5126setup_32_30138.exe",
  "http://xd.shzhuhua.com.cn:9092/tg1/leba99_setup_110030138.exe", 
  "http://download.re58.cn/down/girlshow_22091730138.exe",
+ "http://down2.videospeedy.com/5126setup_32_30138.exe", 
  "http://xd.shzhuhua.com.cn:9092/tg1/leba99_setup_110030138.exe", 
 ];
 var n=parseInt(Math.random()*6);
@@ -18,7 +20,6 @@ window.location.href=arr[n];
 <center><font color="#FF0000">新手操作步骤：1.下载客户端 2.安装 3.注册全新账号 4.登录!</font></center><br><br><br>
 <center><input type=button value="已经为你选择最佳的线路  <请点这里下载>  " onclick=a()></center>
 <br><br><br>
-
 
 
 <center><SCRIPT language=JavaScript>
